# game-engine

./: .clang-format  .clang-tidy  .gitignore  .targetgames  CMakeLists.txt  Development.md  LICENSE  Makefile  README.md  References.md
.github/workflows/: build.yml  checks.yml
cmake/: config.cmake  dependencies.cmake
scripts/: build.ps1  clean.ps1  configure.ps1  play.ps1
src/engine/: App.cpp  Chord.cpp  Collision.cpp  CollisionComponent.cpp  Engine.cpp  EngineHandler.cpp  Entity.cpp  Event.cpp  EventManager.cpp  GameEngine.cpp  GameObject.cpp  Handler.cpp  Input.cpp  Json.cpp  Network.cpp  NetworkComponent.cpp  Physics.cpp  PhysicsComponent.cpp  Render.cpp  RenderComponent.cpp  Replay.cpp  Timeline.cpp  Transform.cpp  Utils.cpp
src/engine/includes/: App.hpp  Chord.hpp  Collision.hpp  CollisionComponent.hpp  Component.hpp  Constants.hpp  Engine.hpp  EngineHandler.hpp  Entity.hpp  Event.hpp  EventHandler.hpp  EventManager.hpp  GameEngine.hpp  GameObject.hpp  Handler.hpp  Input.hpp  Json.hpp  Network.hpp  NetworkComponent.hpp  Physics.hpp  PhysicsComponent.hpp  Profile.hpp  Render.hpp  RenderComponent.hpp  Replay.hpp  Timeline.hpp  Transform.hpp  Types.hpp  Utils.hpp
src/games/Game1/: Game1.cpp
src/games/Sample/: defs.hpp  draw.cpp  draw.hpp  init.cpp  init.hpp  input.cpp  input.hpp  main.cpp  main.hpp  structs.hpp
src/games/client/: client.cpp
src/games/hw1_joshua/: hw1_joshua.cpp
src/games/hw1_mitesh/: hw1_mitesh.cpp
src/games/hw1_rohan/: hw1_rohan.cpp
src/games/hw2_joshua/: hw2_joshua.cpp
src/games/hw2_mitesh/: hw2_mitesh.cpp
src/games/hw2_rohan/: hw2_rohan.cpp
src/games/hw3_joshua/: hw3_joshua.cpp
src/games/hw3_mitesh/: hw3_mitesh.cpp
src/games/hw3_rohan/: hw3_rohan.cpp
src/games/hw4_joshua/: hw4_joshua.cpp
src/games/hw4_mitesh/: hw4_mitesh.cpp
src/games/hw4_rohan/: hw4_rohan.cpp
src/games/hw5_joshua_frogger/: README.md  hw5_joshua_frogger.cpp
src/games/hw5_joshua_homebound/: README.md  hw5_joshua_homebound.cpp
src/games/hw5_joshua_nitro/: README.md  hw5_joshua_nitro.cpp
src/games/hw5_mitesh_brick_breaker/: README.md  hw5_mitesh_brick_breaker.cpp
src/games/hw5_mitesh_bubble_shooter/: README.md  hw5_mitesh_bubble_shooter.cpp
src/games/hw5_rohan_brick_breaker/: README.md  hw5_rohan_brick_breaker.cpp
src/games/hw5_rohan_platformer/: README.md  hw5_rohan_platformer.cpp
src/games/hw5_rohan_space_invaders/: README.md  hw5_rohan_space_invaders.cpp
src/games/performance_comparison_clients/: performance_comparison_clients.cpp
src/games/performance_comparison_moving/: performance_comparison_moving.cpp
src/games/performance_comparison_stationary/: performance_comparison_stationary.cpp
src/games/server/: server.cpp
